# AstroPipe

./: .gitignore  Makefile  README.md  main.py  main_tests.py  pmsapro_v01.py  pyproject.toml  requirements.txt  setup.py  swarpList.txt
AstroPipe/: __init__.py  calibration.py  classes.py  color.py  int.py  masking.py  plotting.py  profile.py  psf.py  query.py  sbprofile.py  scp.py  utilities.py  utils.py
astropipe/: __init__.py  calibration.py  classes.py  int.py  masking.py  plotting.py  profile.py  psf.py  query.py  utils.py
demos/: cavity.ipynb  cavity_demo.csv
demos/temp/.thumbs/: meta
docs/: AstroPipe.rst  conf.py  index.rst
docs/_build/doctrees/: AstroPipe.doctree  environment.pickle  index.doctree  modules.doctree  setup.doctree
docs/_build/html/: .buildinfo  AstroPipe.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/AstroPipe/: calibration.html  classes.html  int.html  masking.html  plotting.html  profile.html  psf.html  query.html  utilities.html
docs/_build/html/_sources/: modules.rst.txt
gui/: ScientificDoubleSpinBox.py  data_exploration.py
gui-Andreu/: default.imp  main.py  main.ui  requirements.txt
