[project]
name = "astropipe"
version = "0.1.0"
description = "Astronomical library to deal with surface photometry of galaxies."
authors = [
    {name = "Pablo M. Sánchez-Alarcón"}
]
license = {text = "C.C"}
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "astropy (>=5.3.4,<6.0.0)",
    "astroquery (>=0.4.7,<0.5.0)",
    "astroalign (>=2.6.1,<3.0.0)",
    "autoprof (>=1.3.1,<2.0.0)",
    "fabada (>=0.1,<0.2)",
    "lmfit (>=1.3.2,<2.0.0)",
    "matplotlib (>=3.9.2,<4.0.0)",
    "numpy (>=1.26.4,<2.0.0)",
    "opencv-python (>=4.10.0.84,<5.0.0.0)",
    "photutils (>=1.5.0,<2.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "regions (>=0.10,<0.11)",
    "scipy (>=1.14.1,<2.0.0)",
    "scikit-learn (>=1.5.2,<2.0.0)",
    "scikit-image (>=0.24.0,<0.25.0)",
    "screeninfo (>=0.8.1,<0.9.0)",
    "urllib3 (>=2.2.3,<3.0.0)",
    "wget (>=3.2,<4.0)",
    "sewpy @ git+https://github.com/megalut/sewpy.git",
    "pyqt5 (>=5.15.11,<6.0.0)"
        
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
